# set(indv_tests main.cc bfs.cc tables.cc sort.cc convert.cc) 
# add_library(mylib ${indv_tests})
# set_target_properties(mylib PROPERTIES LINKER_LANGUAGE CXX)

# add_executable(zombie main.cc)
# set_target_properties(zombie PROPERTIES LINKER_LANGUAGE CXX)
# target_link_libraries(zombie mylib gmt ${MPI_LIBRARIES})
